--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Demo</title>
-    <base href="/" />
+    <base href="%BASE_URL%"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="%BASE_URL%src/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Oswald:wght@400;700&display=swap"
       rel="stylesheet"
@@ -72,6 +72,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="%BASE_URL%src/main.tsx"></script>
   </body>
 </html>
