--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -73,5 +73,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      console.log('Base URL:', import.meta.env.BASE_URL);
+    </script>
   </body>
 </html>
