--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Demo</title>
-    <base href="%BASE_URL%"/>
+    <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
@@ -73,8 +73,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script>
-      console.log('Base URL:', import.meta.env.BASE_URL);
-    </script>
   </body>
 </html>
