--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Demo</title>
+    <title>Demo - React Weapons of Choice</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
+    <meta name="keywords" content="React, SPA, Nx, Tailwind CSS, Shadcn UI, TypeScript, Vite, Monorepo" />
+    <meta name="author" content="CambridgeMonorail" />
+    <meta property="og:title" content="Demo - React Weapons of Choice" />
+    <meta property="og:description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
+    <meta property="og:image" content="/assets/images/social.png" />
+    <meta property="og:url" content="https://cambridgemonorail.github.io/react-weapons-of-choice/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Demo - React Weapons of Choice" />
+    <meta name="twitter:description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
+    <meta name="twitter:image" content="/assets/images/social.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/src/styles.css" />
     <link
@@ -62,7 +73,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="&nbsp;" />
+    <meta name="application-name" content="React Weapons of Choice" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
