chore(index.html): add Google site verification meta tag

--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Demo - React Weapons of Choice</title>
     <base href="/" />
-
+    <meta name="google-site-verification" content="vcXVoRYtK7tLGjvik4u-4h1xuwyYS77_uI4tjW8Xk1A" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
     <meta name="keywords" content="React, SPA, Nx, Tailwind CSS, Shadcn UI, TypeScript, Vite, Monorepo" />
