style(demo): update HTML meta tags and replace logo image

--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -4,21 +4,41 @@
     <meta charset="utf-8" />
     <title>Demo - React Weapons of Choice</title>
     <base href="/" />
-    <meta name="google-site-verification" content="vcXVoRYtK7tLGjvik4u-4h1xuwyYS77_uI4tjW8Xk1A" />
+    <meta
+      name="google-site-verification"
+      content="vcXVoRYtK7tLGjvik4u-4h1xuwyYS77_uI4tjW8Xk1A"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
-    <meta name="keywords" content="React, SPA, Nx, Tailwind CSS, Shadcn UI, TypeScript, Vite, Monorepo" />
+    <meta
+      name="description"
+      content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI."
+    />
+    <meta
+      name="keywords"
+      content="React, SPA, Nx, Tailwind CSS, Shadcn UI, TypeScript, Vite, Monorepo"
+    />
     <meta name="author" content="CambridgeMonorail" />
     <meta property="og:title" content="Demo - React Weapons of Choice" />
-    <meta property="og:description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
+    <meta
+      property="og:description"
+      content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI."
+    />
     <meta property="og:image" content="/assets/images/social.png" />
-    <meta property="og:url" content="https://cambridgemonorail.github.io/react-weapons-of-choice/" />
+    <meta
+      property="og:url"
+      content="https://cambridgemonorail.github.io/react-weapons-of-choice/"
+    />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Demo - React Weapons of Choice" />
-    <meta name="twitter:description" content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI." />
+    <meta
+      name="twitter:description"
+      content="Demo application for React Weapons of Choice, a boilerplate for building modern SPAs using Nx, Tailwind CSS, and Shadcn UI."
+    />
     <meta name="twitter:image" content="/assets/images/social.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Oswald:wght@400;700&display=swap"
       rel="stylesheet"
@@ -82,7 +102,6 @@
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
   </head>
   <body>
-    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
